fix: spacing increased between steps (#74)

--- a/src/components/StepWizard/StepWizard.css
+++ b/src/components/StepWizard/StepWizard.css
@@ -9,7 +9,7 @@
       display: grid;
       grid-gap: var(--spacing-xxlarge);
       border-right: 1px solid #979797;
-      grid-template-rows: repeat(auto-fill, var(--spacing-large));
+      grid-template-rows: repeat(auto-fill, var(--spacing-xxlarge));
 
       .navStep {
         display: grid;
